--- a/frontend/src/components/IT20128036/styles.module.css
+++ b/frontend/src/components/IT20128036/styles.module.css
@@ -6,7 +6,7 @@
 	background-image: url("../../images/back1.jpg");
 	background-color: #ffffff;
 	display: flex;
-	align-items: center;
+	/* align-items: center; */
 	justify-content: center;
 }
 
