--- a/frontend/src/components/IT20128036/contactUs.css
+++ b/frontend/src/components/IT20128036/contactUs.css
@@ -2,7 +2,7 @@
 
 .inq_container {
 
-	background-image: url("../../images/background.png");
+	background-image: url("../../images/back1.jpg");
 	align-items: center;
 	justify-content: center;
 	
